--- a/resources/sass/base/_config.scss
+++ b/resources/sass/base/_config.scss
@@ -76,3 +76,11 @@ body{
 .select2-container--default .select2-selection--single {
     border: transparent !important;
   }
+
+
+  .text-none{
+    text-decoration: none;
+}
+.text-none:hover{
+    text-decoration: none;
+}
