--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5472,6 +5472,10 @@ ul {
   height: auto;
 }
 
+.dropdown-menu {
+  width: 100% !important;
+}
+
 .loader-container {
   width: 100%;
   height: 100%;
