--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5400,7 +5400,6 @@ ul {
 }
 
 .programming-item {
-  padding: 10px 0;
   text-align: center;
 }
 
@@ -5430,11 +5429,11 @@ ul {
 }
 
 .unavailable:hover {
-  background-color: #E17301 !important;
+  background-color: #e17301 !important;
 }
 
 .available:hover {
-  background-color: #ADADAD !important;
+  background-color: #adadad !important;
 }
 
 .current {
