--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -314,6 +314,7 @@ iframe {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
     border-radius: 20px;
     width: 240px;
+    height: 56px;
 }
 
 .edit-rectangle-container {
