pasar los modales a submenus y habilitar todos los scroll

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5843,14 +5843,12 @@ iframe {
 }
 
 .load-view {
-  z-index: 10000;
-  background: white;
-  position: fixed;
-  height: 100vh;
-  width: 100vw;
-  opacity: 0.5;
-  top: 0;
+  top: 200 px;
   margin: auto;
+  position: inherit;
+  z-index: 1000;
+  width: 128px;
+  height: 128px;
   background: url(/images/loader.gif) no-repeat;
   cursor: wait;
 }
