--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -331,14 +331,14 @@ iframe {
     height: 561px;
 }
 .load-view {
-    z-index: 10000;
-    background: white;
-    position: fixed;
-    height: 100vh;
-    width: 100vw;
-    opacity: 0.5;
-    top: 0;
-   margin: auto;
+    top: 200 px;
+    margin: auto;
+    position: inherit;
+    z-index: 1000;
+    width: 128px;
+    height: 128px;
     background: url(/images/loader.gif) no-repeat;
     cursor: wait;
   }
+
+  
