--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -331,12 +331,11 @@ iframe {
     height: 561px;
 }
 .load-view {
-    top: 200 px;
+    display: flex;
+    justify-content: center;
     margin: auto;
-    position: inherit;
+    position: fixed;
     z-index: 1000;
-    width: 128px;
-    height: 128px;
     background: url(/images/loader.gif) no-repeat;
     cursor: wait;
   }
