--- a/resources/sass/atoms/_img.scss
+++ b/resources/sass/atoms/_img.scss
@@ -478,6 +478,10 @@
 }
 
 .dropimg {
-    transform: translate(1090px, -57px);
+
     z-index: 5;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    margin-right: 16px;
 }
